@@ -7,7 +7,6 @@ import static org.apache.bcel.Const.ACC_SUPER;
 import java.lang.reflect.Field;
 import java.lang.reflect.Method;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -66,7 +65,7 @@ public class FunCreator<I> extends FunFactory {
 	}
 
 	public static <I> FunCreator<I> of(Class<I> clazz, boolean isExpand) {
-		FunCreator<I> fc = of(LambdaInterface.of(clazz), Collections.emptyMap());
+		FunCreator<I> fc = of(LambdaInterface.of(clazz), Map.ofEntries());
 		fc.isExpand = isExpand;
 		return fc;
 	}
